--- a/templates/plot.html
+++ b/templates/plot.html
@@ -65,7 +65,7 @@
                 </td>
                 <td>
                     <video width="550" height="400" controls>
-                        <source src="../static/video/course['vurl']" type="video/mp4">
+                        <source src="../static/video/{{course['vurl']}}" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
                 </td>
@@ -80,8 +80,6 @@
       </div>
     <script>
         var x={{score}};
-        console.log({{s}});
-        console.log({{score}});
         var y=['shoulders','left hand','right hand','left forearm','right forearm', 'left side of the body','right side of the body', 'waist', 'left thigh','right thigh','left crus','right crus','head','shoulders'];
         var data = [{
             type: 'scatterpolar',
