--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,13 +1,23 @@
 body {
-    background-image: linear-gradient(to right, #0b0e0b , #8C55AA);
     font-family: 'Ubuntu', sans-serif;
     
+}
+#vantaWaves{
+    position: absolute;
+    display: block;
+    min-width: 100%;
+    min-height: 130vh;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: -1;
 }
 
 .main {
     background-color: #202124;
     width: 400px;
-    height: 400px;
+    height: 360px;
     border-radius: 1.5em;
     margin: 7em auto;
     box-shadow: 0px 11px 35px 2px rgba(0, 0, 0, 0.14);
@@ -16,18 +26,19 @@ body {
 .main_s {
     background-color: #202124;
     width: 400px;
-    height: 750px;
+    height: 700px;
     margin: 7em auto;
     border-radius: 1.5em;
     box-shadow: 0px 11px 35px 2px rgba(0, 0, 0, 0.14);
 }
 
 .sign {
-    padding-top: 40px;
+    padding-top: 5px;
     color: #8C55AA;
     font-family: 'Ubuntu', sans-serif;
     font-weight: bold;
     font-size: 23px;
+    padding-left: 20px;
 }
 
 .un {
@@ -71,7 +82,7 @@ body {
 }
 
 form.form1 {
-    padding-top: 40px;
+    padding-top: 20px;
 }
 
 .un:focus {
@@ -99,6 +110,7 @@ form.form1 {
     text-shadow: 0px 0px 3px rgba(117, 117, 117, 0.12);
     color: #E1BEE7;
     padding-top: 15px;
+    margin-bottom: 15px;
 }
 
 a {
