--- a/static/css/shopping.css
+++ b/static/css/shopping.css
@@ -3,7 +3,18 @@
 body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
-  background: linear-gradient(to left, #606060, #212121 50%, #121212 100%);
+ 
+}
+#vantaWaves{
+  position: absolute;
+  display: block;
+  min-width: 100%;
+  min-height: 200vh;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: -1;
 }
 
 .topnav {
