--- a/static/css/video.css
+++ b/static/css/video.css
@@ -3,7 +3,17 @@
 body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
-  background: linear-gradient(to left, #606060, #212121 50%, #121212 100%);
+}
+#vantaWaves{
+  position: absolute;
+  display: block;
+  min-width: 100%;
+  min-height: 100vh;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: -1;
 }
 
 .topnav {
@@ -87,7 +97,7 @@ body {
     margin-left: 2vw;
     border: 0px solid;
     border-radius: 15px;
-    opacity: 0.72;
+    opacity: 1;
   }
 
   .sidenav p {
@@ -118,7 +128,7 @@ body {
   }
   
   .video {
-    margin-left: 350px;
+    margin-left: 25vw;
     height: 400px;
     width: 800px;
     position: fixed;
@@ -130,7 +140,7 @@ body {
     overflow-y: hidden;
     margin-top: 16vh;
     border: 0px solid;
-    opacity: 0.72;
+    opacity: 1;
   }
 
   .main {
@@ -323,7 +333,7 @@ body {
     margin-left: 370px;
     top: 0;
     left: 0;
-    height: 1050px;
+    height: 1100px;
     width: 1110px;
     overflow-x: hidden;
     padding: 0px 10px;
@@ -331,7 +341,7 @@ body {
     margin-top: 5vh;
     font-size: 28px; /* Increased text to enable scrolling */   
     background-color: #202124;
-    opacity: 0.72;
+    opacity: 1;
     border-radius: 20px;
   }
 
@@ -379,3 +389,25 @@ body {
     overflow-x: hidden;
     overflow-y: hidden;
   }
+
+  .ana{
+    margin-left: 370px;
+    top: 0;
+    left: 0;
+    height: 600px;
+    width: 1110px;
+    overflow-x: hidden;
+    padding: 0px 10px;
+    padding-top: 5px;
+    margin-top: 5vh;
+    font-size: 28px; /* Increased text to enable scrolling */   
+    background-color: #202124;
+    opacity: 0.72;
+    border-radius: 20px;
+  }
+
+  .ana p{
+    color: #4DB3E6;
+    margin-left: 10px;
+    font-size: 22px;
+}
