--- a/static/css/video_train.css
+++ b/static/css/video_train.css
@@ -3,7 +3,17 @@
 body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
-  background: linear-gradient(to left, #606060, #212121 50%, #121212 100%);
+}
+#vantaWaves{
+  position: absolute;
+  display: block;
+  min-width: 100%;
+  min-height: 100vh;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: -1;
 }
 
 .topnav {
@@ -88,7 +98,7 @@ body {
     margin-left: 2vw;
     border: 0px solid;
     border-radius: 15px;
-    opacity: 0.72;
+    opacity: 1;
   }
 
   .sidenav p {
@@ -130,7 +140,7 @@ body {
     overflow-y: hidden;
     margin-top: 16vh;
     border: 0px solid;
-    opacity: 0.72;
+    opacity: 1;
   }
 
   .main {
