--- a/templates/shopping.html
+++ b/templates/shopping.html
@@ -42,7 +42,25 @@
     </div>
     {%endfor%}
     <a href="#" class="main_button">Buy Now</a>
-
+    <div id="vantaWaves"></div>
+      <script src="https://cdn.jsdelivr.net/npm/vanta@0.5.21/vendor/three.r119.min.js"></script>
+      <script src="https://cdn.jsdelivr.net/npm/vanta@0.5.21/dist/vanta.fog.min.js"></script>
+      <script>
+        VANTA.FOG({
+          el: "#vantaWaves",
+          mouseControls: true,
+          touchControls: true,
+          gyroControls: false,
+          minHeight: 200.00,
+          minWidth: 200.00,
+          highlightColor: 0xcf5fea,
+          midtoneColor: 0x434bf9,
+          lowlightColor: 0x6e41c7,
+          baseColor: 0x202020,
+          blurFactor: 0.79,
+          speed: 5.00
+        });
+        </script>
       
 </body>
 
