--- a/templates/signup.html
+++ b/templates/signup.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="main_s">
-        <img style="width: 70px; height: 70px; margin-bottom: -11.5vh; margin-left: 5.1vw;" src="../static/images/favicon.PNG" alt="" />
+        <img style="width: 70px; height: 70px; margin-bottom: -9vh; margin-left: 5.1vw;" src="../static/images/favicon.PNG" alt="" />
         <p class="sign" style="text-align: center;">Sign up</p>
         <form class="form1" method="POST">
         <input class="un" type="text" style="align-items: center;" placeholder="Name" name="name">
@@ -31,7 +31,24 @@
         <input type="submit" class="submit" style="align-items: center;" value="Sign up"></form>
         <p class="forgot" style="text-align: center;"><a href="/login">Already Have an Account?</a></p>
     </div>
-     
+</div>
+<div id="vantaWaves"></div>
+<script src="https://cdn.jsdelivr.net/npm/vanta@0.5.21/vendor/three.r119.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/vanta@0.5.21/dist/vanta.net.min.js"></script>
+<script>
+  VANTA.NET({
+    el: "#vantaWaves",
+    mouseControls: true,
+    touchControls: true,
+    gyroControls: false,
+    minHeight: 200.00,
+    minWidth: 200.00,
+    scale: 1.00,
+    scaleMobile: 1.00,
+    color: 0x8C55AA,
+    backgroundColor: 0x0b0e0b
+    });
+  </script>
 </body>
 
 </html>
