Minor Bug fixes and logo change

--- a/templates/plot.html
+++ b/templates/plot.html
@@ -19,21 +19,15 @@
 <body>
     <div class="topnav">
         <div style=" margin-left: 10vw;">
-            <a href="/" style="float:left; margin:-20px;"><p><img style="width: 50px; height: 50px; margin:-20px;" src="../static/images/favicon.PNG" alt="" /></p></a>
-            <p>Categories</p>
-            <div class="search-container">
-                <form>
-                  <input type="text" placeholder="Search.." name="search">
-                  <p><i class="fa fa-search"></i></p>
-                </form>
-            </div>
+          <a href="/" style="float:left; margin:-20px;"><p><img style="width: 75px; height: 75px; margin:-20px;" src="../static/images/favicon.PNG" alt="" /></p>
+          <p style="font-size: 70px; margin: -10px; margin-left: 10px; font-family: 'Times New Roman', Times, serif;">EdTutor</p></a>
         </div>
         <div style=" margin-right: 10vw;">
-            <a href="/profile"><img style="width: 25px; height: 25px;" src="../static/images/profileicon.png" alt="" /></a>
-            <a href="/cart1"><img style="width: 25px; height: 25px;" src="../static/images/cart (1).png" alt="" /></a>
-            <a href="/landing">My Tutorial</a>
-            <a href="/logout">Logout</a>
-        </div>        
+          <a href="/profile"><img style="width: 25px; height: 25px;" src="../static/images/profileicon.png" alt="" /></a>
+          <a href="/cart"><img style="width: 25px; height: 25px;" src="../static/images/cart (1).png" alt="" /></a>
+          <a href="/landing"><p style="font-size: 25px; margin: -3px;">My Tutorial</p></a>
+          <a href="/logout"><p style="font-size: 25px; margin: -3px;">Logout</p></a>
+        </div>
       </div>
       
       <!--div class="sidenav">
