--- a/templates/course.html
+++ b/templates/course.html
@@ -8,33 +8,33 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <title>Courses</title>
   <link rel="icon" href="../static/images/favicon.PNG">
+  <style>
+    #vantaWaves{
+      min-height: 120vh;
+    }
+  </style>
 </head>
 
 <body>
-    <div class="topnav">
-        <div style=" margin-left: 10vw;">
-          <a href="/" style="float:left; margin:-20px;"><p><img style="width: 50px; height: 50px; margin:-20px;" src="../static/images/favicon.PNG" alt="" /></p></a>
-            <p>Categories</p>
-            <div class="search-container">
-                <form>
-                  <input type="text" placeholder="Search.." name="search">
-                  <p><i class="fa fa-search"></i></p>
-                </form>
-            </div>
-        </div>
-        <div style=" margin-right: 10vw;">
-          <a href="/profile"><img style="width: 25px; height: 25px;" src="../static/images/profileicon.png" alt="" /></a>
-          <a href="/cart1"><img style="width: 25px; height: 25px;" src="../static/images/cart (1).png" alt="" /></a>
-          <a href="/landing">My Tutorial</a>
-          <a href="/logout">Logout</a>
-        </div>
-      </div>
+  <div class="topnav">
+    <div style=" margin-left: 10vw;">
+      <a href="/" style="float:left; margin:-20px;"><p><img style="width: 75px; height: 75px; margin:-20px;" src="../static/images/favicon.PNG" alt="" /></p>
+      <p style="font-size: 70px; margin: -10px; margin-left: 10px; font-family: 'Times New Roman', Times, serif;">EdTutor</p></a>
+    </div>
+    <div style=" margin-right: 10vw;">
+      <a href="/profile"><img style="width: 25px; height: 25px;" src="../static/images/profileicon.png" alt="" /></a>
+      <a href="/cart"><img style="width: 25px; height: 25px;" src="../static/images/cart (1).png" alt="" /></a>
+      <a href="/landing"><p style="font-size: 25px; margin: -3px;">My Tutorial</p></a>
+      <a href="/logout"><p style="font-size: 25px; margin: -3px;">Logout</p></a>
+    </div>
+  </div>
       <div style="margin: 5vh;"></div>
-
+      {%for j in categories%}
       <div style="margin: 5vh;">
-        <h2 style="color: #4DB3E6;">Resume Workout</h2>
+        <h2 style="color: #4DB3E6;">{{j}}</h2>
         <div class="row">
             {% for i in cname%}
+            {%if course[i]['category']==j%}
                 <a href="/warmup/{{course[i]['url']}}"><div class="column">
                   <div class="card">
                     <img src="../static/images/{{course[i]['img']}}" alt="" />
@@ -42,12 +42,14 @@
                     <p style="color: black;">{{course[i]["description"]}}</p>
                   </div>
                 </div></a>
+            {%endif%}
             {% endfor %}
         </div>
       </div>
       <div style="margin: 5vh;"></div>
+      {%endfor%}
 
-      <div style="margin: 5vh;">
+      <!--div style="margin: 5vh;">
         <h2 style="color: #4DB3E6;">My Coaches</h2>
         <div class="row">
             <div class="column">
@@ -82,7 +84,7 @@
               </div>
             </div>
           </div>
-      </div>
+      </div-->
       <div id="vantaWaves"></div>
       <script src="https://cdn.jsdelivr.net/npm/vanta@0.5.21/vendor/three.r119.min.js"></script>
       <script src="https://cdn.jsdelivr.net/npm/vanta@0.5.21/dist/vanta.fog.min.js"></script>
