--- a/templates/shopping.html
+++ b/templates/shopping.html
@@ -13,32 +13,26 @@
 </head>
 
 <body>
-    <div class="topnav">
-        <div style=" margin-left: 10vw;">
-            <a href="/" style="float:left; margin:-20px;"><p><img style="width: 50px; height: 50px; margin:-20px;" src="../static/images/favicon.PNG" alt="" /></p></a>
-            <p>Categories</p>
-            <div class="search-container">
-                <form>
-                  <input type="text" placeholder="Search.." name="search">
-                  <p><i class="fa fa-search"></i></p>
-                </form>
-            </div>
-        </div>
-        <div style=" margin-right: 10vw;">
-            <a href="#"><img style="width: 25px; height: 25px;" src="../static/images/profileicon.png" alt="" /></a>
-            <a href="#"><img style="width: 25px; height: 25px;" src="../static/images/cart (1).png" alt="" /></a>
-            <a href="#">My Tutorial</a>
-        </div>        
-      </div>
+  <div class="topnav">
+    <div style=" margin-left: 10vw;">
+      <a href="/" style="float:left; margin:-20px;"><p><img style="width: 75px; height: 75px; margin:-20px;" src="../static/images/favicon.PNG" alt="" /></p>
+      <p style="font-size: 70px; margin: -10px; margin-left: 10px; font-family: 'Times New Roman', Times, serif;">EdTutor</p></a>
+    </div>
+    <div style=" margin-right: 10vw;">
+      <a href="/profile"><img style="width: 25px; height: 25px;" src="../static/images/profileicon.png" alt="" /></a>
+      <a href="/cart"><img style="width: 25px; height: 25px;" src="../static/images/cart (1).png" alt="" /></a>
+      <a href="/landing"><p style="font-size: 25px; margin: -3px;">My Tutorial</p></a>
+      <a href="/logout"><p style="font-size: 25px; margin: -3px;">Logout</p></a>
+    </div>
+  </div>
       <div class="shop">
           <p>Shopping Cart</p>
       </div>
       {%for i in cart%}
       <div class="c_container">
-        <img src="../static/images/{{courses[i]['vurl']}}" alt="" />
+        <img src="../static/images/{{courses[i]['img']}}" alt="" />
         <h2 style="color: #fff; margin-top: 10px;">{{courses[i]['name']}}</h2>
         <p style="color: #cfcfcf; font-size: 18px; margin-top: -10px;">{{courses[i]['description']}}</p>
-        <p class="c_button">Best Seller</p>   
     </div>
     {%endfor%}
     <a href="#" class="main_button">Buy Now</a>
