--- a/templates/course.html
+++ b/templates/course.html
@@ -39,7 +39,8 @@
                   <div class="card">
                     <img src="../static/images/{{course[i]['img']}}" alt="" />
                     <h2>{{i}}</h2>
-                    <p style="color: black;">{{course[i]["description"]}}</p>
+                    <p style="color: rgb(255, 255, 255);">{{course[i]["description"]}}</p>
+                    <p><b>Views: </b>{{course[i]['views']}}</p>
                   </div>
                 </div></a>
             {%endif%}
