--- a/templates/profile.html
+++ b/templates/profile.html
@@ -91,14 +91,15 @@
     type: 'bar',
     text: ['shoulders','left hand','right hand','left forearm','right forearm', 'left side of the body','right side of the body', 'waist', 'left thigh','right thigh','left crus','right crus','head','shoulders'],
     marker: {
-      color: 'rgb(142,124,195)'
+      border: '#000',
+      color: '#eed9f1'
     }
     };
 
     var data = [trace1];
 
     var layout = {
-    title: 'Accuracy of each joint',
+    title: 'Average Accuracy of Each Joint',
     font:{
       family: 'Raleway, sans-serif'
     },
