--- a/static/css/style.css
+++ b/static/css/style.css
@@ -213,14 +213,16 @@ body {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     padding: 6px;
     text-align: left;
-    background-color: #6A6A6A;
+    background-color: #6A6A6ACC;
     color: #fff;
     border: 0px solid;
     border-radius: 20px;
     height: 200px;
     overflow-x: hidden;
   }
-
+  .card:hover{
+    background-color: #6A6A6AFF;
+  }
   .card img{
     width: 170px;
     height: 170px;
