--- a/templates/profile.html
+++ b/templates/profile.html
@@ -70,7 +70,7 @@
     {
       domain: { x: [0, 1], y: [0, 1] },
       value: {{avg}},
-      title: { text: "Total Average Accuracy" },
+      title: { text: "Total Average Accuracy(in %)" },
       type: "indicator",
       mode: "gauge+number",
       delta: { reference: 400 },
@@ -91,7 +91,7 @@
     type: 'bar',
     text: ['shoulders','left hand','right hand','left forearm','right forearm', 'left side of the body','right side of the body', 'waist', 'left thigh','right thigh','left crus','right crus','head','shoulders'],
     marker: {
-      border: '#000',
+      borderwidth: 2, bordercolor: "#000000",
       color: '#eed9f1'
     }
     };
@@ -99,7 +99,7 @@
     var data = [trace1];
 
     var layout = {
-    title: 'Average Accuracy of Each Joint',
+    title: 'Average Accuracy of Each Joint(in %)',
     font:{
       family: 'Raleway, sans-serif'
     },
